--- a/app/src/main/res/layout/ami_action_bar.xml
+++ b/app/src/main/res/layout/ami_action_bar.xml
@@ -16,7 +16,9 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:contentDescription="@string/app_name"
-        app:srcCompat="@drawable/ic_drawer" />
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:src="@drawable/ic_drawer" />
 
     <ImageView
         android:layout_width="wrap_content"
