--- a/app/src/main/res/layout/layout_adapter_contact.xml
+++ b/app/src/main/res/layout/layout_adapter_contact.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@android:color/black"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"/>
 
@@ -20,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvContact"
-        android:textColor="@android:color/holo_blue_bright"
+        android:textColor="@android:color/darker_gray"
         android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"
@@ -28,9 +29,9 @@
 
     <CheckBox
         android:id="@+id/cbContact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true" />
 </RelativeLayout>
